--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,6 @@
 
   --boxShadow-grey: 0.15em 0.30em 0.5em -0.15em rgba(17,19,68,0.75);
 
-
 }
 html{
   font-size: 18px;
@@ -66,5 +65,9 @@ input:focus{
 
 button{
   background-color: black;
+}
+
+#header-logo{
+  max-width: 33%;
 }
 
