--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,11 +15,15 @@
 
   --title-height: 75vh;
 
-  --boxShadow-grey: 0.15em 0.30em 0.5em -0.15em rgba(17,19,68,0.75);
+  --boxShadow-grey: 0.15em 0.30em 0.5em -0.15em rgba(17, 19, 68, 0.75);
+  --three-quarter: 75%;
   --half: 48%;
+  --third: 32%;
   --quarter: 23%;
+  --oneEm: 1em;
 }
-html{
+
+html {
   font-size: 18px;
   width: 100%;
   height: 100%;
@@ -30,63 +34,76 @@ body {
   font-family: 'Poppins', sans-serif;
   width: 100%;
   height: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   background-color: var(--offWhite);
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  height: 100%;
 }
 
 main,
-#header,
-#footer{
+#header {
   padding: 5% 10%;
 }
 
-h1{
+#footer {
+  padding: 1em 10%;
+}
+
+#footer {
+  margin-top: auto;
+}
+
+h1 {
   font-size: 2.5em;
 }
 
-h2{
+h2 {
   font-size: 1.75em;
 }
 
-h3{
+h3 {
   font-size: 1.5em;
 }
 
-h4{
+h4 {
   font-size: 1.2em;
 }
 
-input{
+input {
   border-radius: 0.5em;
 }
 
-input:focus{
+input:focus {
   outline: none;
 }
 
-button{
+button {
   background-color: black;
 }
 
-#header-logo{
+#header-logo {
   max-width: 33%;
 }
 
 @media (min-width: 768px) {
+
   main,
-  #header,
-  #footer{
+  #header {
     padding: 2% 10%;
   }
 
-    #header-logo{
-      max-width: 20%;
-    }
+  #header-logo {
+    max-width: 20%;
+  }
 
 }
 
 @media (min-width: 1024px) {
-  #header-logo{
+  #header-logo {
     max-width: 10%;
   }
 
